lr1 Базовая реализация